Fix footer alignment and newsletter form

--- a/themes/custom/expo2020/assets/src/scss/app/layout/home.scss
+++ b/themes/custom/expo2020/assets/src/scss/app/layout/home.scss
@@ -256,7 +256,7 @@ h2.accent {
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
   &:hover {
-    filter: brightness(110%);
+    filter: brightness(120%);
   }
 }
 .icon1 img,
@@ -285,7 +285,7 @@ h2.accent {
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
   &:hover {
-    filter: brightness(110%);
+    filter: brightness(130%);
   }
 }
 .icon3{
@@ -299,7 +299,7 @@ h2.accent {
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
   &:hover {
-    filter: brightness(110%);
+    filter: brightness(120%);
   }
 }
 
